--- a/paste/package.json
+++ b/paste/package.json
@@ -7,7 +7,7 @@
     "type": "module",
     "dependencies": {
         "@enginehub/schematicjs": "^0.9.2",
-        "@enginehub/schematicwebviewer": "^4.9.0",
+        "@enginehub/schematicwebviewer": "^4.9.1",
         "@enginehub/shared": "workspace:*",
         "@google-cloud/storage": "^7.12.1",
         "base64-js": "^1.5.1",
@@ -43,5 +43,7 @@
         "lint": "eslint src/ pages/",
         "lint:fix": "yarn lint --fix"
     },
-    "sideEffects": ["*.global.css"]
+    "sideEffects": [
+        "*.global.css"
+    ]
 }
