--- a/builds/package.json
+++ b/builds/package.json
@@ -10,12 +10,11 @@
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
-        "got": "^14.4.2",
         "moment": "^2.30.1",
         "next": "^14.2.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "sharp": "^0.33.4"
+        "sharp": "^0.33.5"
     },
     "devDependencies": {
         "@types/node": "^20.14.15",
@@ -24,15 +23,9 @@
         "eslint": "^9.9.0",
         "postcss-preset-env": "^10.0.0",
         "prettier": "^3.3.3",
-        "typescript": "^5.5.4"
+        "typescript": "^5.7.2"
     },
-    "keywords": [
-        "nextjs",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "dev": "yarn next",
         "clean": "rm -rf build",
