--- a/main-site/package.json
+++ b/main-site/package.json
@@ -10,7 +10,7 @@
         "next": "^14.2.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "sharp": "^0.33.4",
+        "sharp": "^0.33.5",
         "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
@@ -19,15 +19,9 @@
         "eslint": "^9.9.0",
         "postcss-preset-env": "^10.0.0",
         "prettier": "^3.3.3",
-        "typescript": "^5.5.4"
+        "typescript": "^5.7.2"
     },
-    "keywords": [
-        "gatsby",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["gatsby", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "build": "yarn next build",
         "dev": "yarn next dev",
