--- a/paste/package.json
+++ b/paste/package.json
@@ -14,7 +14,7 @@
         "next": "^14.2.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "sharp": "^0.33.4",
+        "sharp": "^0.33.5",
         "shortid": "^2.2.16"
     },
     "devDependencies": {
@@ -25,7 +25,7 @@
         "eslint": "^9.9.0",
         "postcss-preset-env": "^10.0.0",
         "prettier": "^3.3.3",
-        "typescript": "^5.5.4"
+        "typescript": "^5.7.2"
     },
     "keywords": [
         "pastebin",
@@ -43,7 +43,5 @@
         "lint": "eslint src/ pages/",
         "lint:fix": "yarn lint --fix"
     },
-    "sideEffects": [
-        "*.global.css"
-    ]
+    "sideEffects": ["*.global.css"]
 }
