--- a/shared/package.json
+++ b/shared/package.json
@@ -14,15 +14,10 @@
         "@types/react-dom": "18.3.0",
         "eslint": "^9.9.0",
         "prettier": "^3.3.3",
-        "tslib": "^2.6.3",
-        "typescript": "^5.5.4"
+        "tslib": "^2.8.1",
+        "typescript": "^5.7.2"
     },
-    "keywords": [
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
         "lint": "eslint src/",
