--- a/shared/package.json
+++ b/shared/package.json
@@ -14,6 +14,7 @@
         "@types/react-dom": "19.0.2",
         "eslint": "^9.17.0",
         "prettier": "^3.4.2",
+        "schema-dts": "^1.1.2",
         "tslib": "^2.8.1",
         "typescript": "^5.7.2"
     },
