--- a/paste/package.json
+++ b/paste/package.json
@@ -18,7 +18,7 @@
         "shortid": "^2.2.17"
     },
     "devDependencies": {
-        "@types/node": "^22.10.10",
+        "@types/node": "^22.12.0",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
         "@types/shortid": "^2.2.0",
@@ -43,5 +43,7 @@
         "lint": "eslint src/ pages/",
         "lint:fix": "yarn lint --fix"
     },
-    "sideEffects": ["*.global.css"]
+    "sideEffects": [
+        "*.global.css"
+    ]
 }
