--- a/builds/package.json
+++ b/builds/package.json
@@ -17,7 +17,7 @@
         "sharp": "^0.33.5"
     },
     "devDependencies": {
-        "@types/node": "^22.10.10",
+        "@types/node": "^22.12.0",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
         "eslint": "^9.19.0",
@@ -25,7 +25,13 @@
         "prettier": "^3.4.2",
         "typescript": "^5.7.3"
     },
-    "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
+    "keywords": [
+        "nextjs",
+        "enginehub",
+        "worldedit",
+        "worldguard",
+        "craftbook"
+    ],
     "scripts": {
         "dev": "yarn next",
         "clean": "rm -rf build",
