--- a/shared/package.json
+++ b/shared/package.json
@@ -9,7 +9,7 @@
     "types": "./src/index.ts",
     "type": "module",
     "devDependencies": {
-        "@types/node": "^22.10.10",
+        "@types/node": "^22.12.0",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
         "eslint": "^9.19.0",
@@ -18,7 +18,12 @@
         "tslib": "^2.8.1",
         "typescript": "^5.7.3"
     },
-    "keywords": ["enginehub", "worldedit", "worldguard", "craftbook"],
+    "keywords": [
+        "enginehub",
+        "worldedit",
+        "worldguard",
+        "craftbook"
+    ],
     "scripts": {
         "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
         "lint": "eslint src/",
