--- a/builds/package.json
+++ b/builds/package.json
@@ -17,21 +17,15 @@
         "sharp": "^0.33.5"
     },
     "devDependencies": {
-        "@types/node": "^22.12.0",
+        "@types/node": "^22.13.1",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
-        "eslint": "^9.19.0",
+        "eslint": "^9.20.0",
         "postcss-preset-env": "^10.1.3",
-        "prettier": "^3.4.2",
+        "prettier": "^3.5.0",
         "typescript": "^5.7.3"
     },
-    "keywords": [
-        "nextjs",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "dev": "yarn next",
         "clean": "rm -rf build",
