--- a/golf/package.json
+++ b/golf/package.json
@@ -26,23 +26,17 @@
     "devDependencies": {
         "@types/gzip-js": "^0.3.5",
         "@types/jsonwebtoken": "^9.0.8",
-        "@types/node": "^22.12.0",
+        "@types/node": "^22.13.1",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
         "@types/safe-compare": "^1.1.2",
         "@types/shortid": "^2.2.0",
-        "eslint": "^9.19.0",
+        "eslint": "^9.20.0",
         "postcss-preset-env": "^10.1.3",
-        "prettier": "^3.4.2",
+        "prettier": "^3.5.0",
         "typescript": "^5.7.3"
     },
-    "keywords": [
-        "nextjs",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "dev": "yarn next",
         "build": "yarn next build",
