--- a/main-site/package.json
+++ b/main-site/package.json
@@ -16,18 +16,12 @@
     "devDependencies": {
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
-        "eslint": "^9.19.0",
+        "eslint": "^9.20.0",
         "postcss-preset-env": "^10.1.3",
-        "prettier": "^3.4.2",
+        "prettier": "^3.5.0",
         "typescript": "^5.7.3"
     },
-    "keywords": [
-        "gatsby",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["gatsby", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "build": "yarn next build",
         "dev": "yarn next dev",
