--- a/paste/package.json
+++ b/paste/package.json
@@ -6,7 +6,7 @@
     "author": "EngineHub",
     "type": "module",
     "dependencies": {
-        "@enginehub/schematicjs": "^0.9.2",
+        "@enginehub/schematicjs": "^0.10.0",
         "@enginehub/schematicwebviewer": "^4.9.1",
         "@enginehub/shared": "workspace:*",
         "@google-cloud/storage": "^7.15.0",
@@ -18,13 +18,13 @@
         "shortid": "^2.2.17"
     },
     "devDependencies": {
-        "@types/node": "^22.12.0",
+        "@types/node": "^22.13.1",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
         "@types/shortid": "^2.2.0",
-        "eslint": "^9.19.0",
+        "eslint": "^9.20.0",
         "postcss-preset-env": "^10.1.3",
-        "prettier": "^3.4.2",
+        "prettier": "^3.5.0",
         "typescript": "^5.7.3"
     },
     "keywords": [
@@ -43,7 +43,5 @@
         "lint": "eslint src/ pages/",
         "lint:fix": "yarn lint --fix"
     },
-    "sideEffects": [
-        "*.global.css"
-    ]
+    "sideEffects": ["*.global.css"]
 }
