--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     },
     "packageManager": "yarn@4.6.0",
     "devDependencies": {
-        "@eslint/compat": "^1.2.6",
-        "@next/eslint-plugin-next": "^15.1.6",
-        "eslint-config-next": "^15.1.6",
-        "eslint-import-resolver-typescript": "^3.7.0",
+        "@eslint/compat": "^1.2.9",
+        "@eslint/js": "^9.27.0",
+        "@next/eslint-plugin-next": "^15.3.2",
+        "eslint-config-next": "^15.3.2",
+        "eslint-import-resolver-typescript": "^4.3.5",
         "eslint-plugin-import": "^2.31.0",
-        "eslint-plugin-react": "^7.37.4",
-        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "6.0.0-rc.1",
         "eslint-plugin-simple-import-sort": "^12.1.1",
-        "eslint-plugin-sonarjs": "^3.0.1",
-        "eslint-plugin-unicorn": "^56.0.1",
-        "typescript-eslint": "^8.23.0",
+        "eslint-plugin-sonarjs": "^3.0.2",
+        "eslint-plugin-unicorn": "^59.0.1",
+        "typescript-eslint": "^8.32.1",
         "typescript-plugin-css-modules": "^5.1.0"
     }
 }
