chore: enable react compiler on builds & paste

--- a/builds/package.json
+++ b/builds/package.json
@@ -20,6 +20,7 @@
         "@types/node": "^22.15.21",
         "@types/react": "19.1.5",
         "@types/react-dom": "19.1.5",
+        "babel-plugin-react-compiler": "^19.1.0-rc.2",
         "eslint": "^9.27.0",
         "postcss-preset-env": "^10.1.6",
         "prettier": "^3.5.3",
