--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "dependencies": {
         "husky": "^9.1.7",
-        "lint-staged": "^16.0.0",
+        "lint-staged": "^16.1.0",
         "postinstall-postinstall": "^2.1.0"
     },
     "scripts": {
@@ -25,17 +25,17 @@
     "packageManager": "yarn@4.6.0",
     "devDependencies": {
         "@eslint/compat": "^1.2.9",
-        "@eslint/js": "^9.27.0",
-        "@next/eslint-plugin-next": "^15.3.2",
-        "eslint-config-next": "^15.3.2",
-        "eslint-import-resolver-typescript": "^4.3.5",
+        "@eslint/js": "^9.28.0",
+        "@next/eslint-plugin-next": "^15.3.3",
+        "eslint-config-next": "^15.3.3",
+        "eslint-import-resolver-typescript": "^4.4.2",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "6.0.0-rc.1",
+        "eslint-plugin-react-hooks": "6.0.0-rc1",
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "eslint-plugin-sonarjs": "^3.0.2",
         "eslint-plugin-unicorn": "^59.0.1",
-        "typescript-eslint": "^8.32.1",
+        "typescript-eslint": "^8.33.1",
         "typescript-plugin-css-modules": "^5.1.0"
     }
 }
