chore: bump yarn

--- a/paste/package.json
+++ b/paste/package.json
@@ -44,5 +44,7 @@
         "lint": "eslint src/ pages/",
         "lint:fix": "yarn lint --fix"
     },
-    "sideEffects": ["*.global.css"]
+    "sideEffects": [
+        "*.global.css"
+    ]
 }
