--- a/golf/package.json
+++ b/golf/package.json
@@ -36,7 +36,13 @@
         "prettier": "^3.6.2",
         "typescript": "^5.8.3"
     },
-    "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
+    "keywords": [
+        "nextjs",
+        "enginehub",
+        "worldedit",
+        "worldguard",
+        "craftbook"
+    ],
     "scripts": {
         "dev": "yarn next",
         "build": "yarn next build",
