--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "type": "module",
-    "workspaces": ["main-site", "builds", "paste", "golf", "shared"],
+    "workspaces": [
+        "main-site",
+        "builds",
+        "paste",
+        "golf",
+        "shared"
+    ],
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -22,7 +28,7 @@
         "prepare": "husky",
         "precommit": "lint-staged"
     },
-    "packageManager": "yarn@4.6.0",
+    "packageManager": "yarn@4.9.4",
     "devDependencies": {
         "@eslint/compat": "^1.3.1",
         "@eslint/js": "^9.31.0",
