--- a/shared/package.json
+++ b/shared/package.json
@@ -18,7 +18,12 @@
         "tslib": "^2.8.1",
         "typescript": "^5.8.3"
     },
-    "keywords": ["enginehub", "worldedit", "worldguard", "craftbook"],
+    "keywords": [
+        "enginehub",
+        "worldedit",
+        "worldguard",
+        "craftbook"
+    ],
     "scripts": {
         "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
         "lint": "eslint src/",
