--- a/builds/package.json
+++ b/builds/package.json
@@ -7,9 +7,9 @@
     "type": "module",
     "dependencies": {
         "@enginehub/shared": "workspace:*",
-        "@fortawesome/fontawesome-svg-core": "^6.7.2",
-        "@fortawesome/free-solid-svg-icons": "^6.7.2",
-        "@fortawesome/react-fontawesome": "^0.2.6",
+        "@fortawesome/fontawesome-svg-core": "^7.0.1",
+        "@fortawesome/free-solid-svg-icons": "^7.0.1",
+        "@fortawesome/react-fontawesome": "^3.0.2",
         "moment": "^2.30.1",
         "next": "^15.5.2",
         "react": "^19.1.1",
@@ -26,13 +26,7 @@
         "prettier": "^3.6.2",
         "typescript": "^5.9.2"
     },
-    "keywords": [
-        "nextjs",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "dev": "yarn next",
         "clean": "rm -rf build",
