--- a/main-site/package.json
+++ b/main-site/package.json
@@ -7,27 +7,21 @@
     "type": "module",
     "dependencies": {
         "@enginehub/shared": "workspace:*",
-        "next": "^15.5.2",
-        "react": "^19.1.1",
-        "react-dom": "^19.1.1",
-        "sharp": "^0.34.3",
+        "next": "^16.0.7",
+        "react": "^19.2.1",
+        "react-dom": "^19.2.1",
+        "sharp": "^0.34.5",
         "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
-        "@types/react": "19.1.12",
-        "@types/react-dom": "19.1.9",
-        "eslint": "^9.35.0",
-        "postcss-preset-env": "^10.3.1",
-        "prettier": "^3.6.2",
-        "typescript": "^5.9.2"
+        "@types/react": "19.2.7",
+        "@types/react-dom": "19.2.3",
+        "eslint": "^9.39.1",
+        "postcss-preset-env": "^10.4.0",
+        "prettier": "^3.7.4",
+        "typescript": "^5.9.3"
     },
-    "keywords": [
-        "gatsby",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["gatsby", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "build": "yarn next build",
         "dev": "yarn next dev",
