--- a/package.json
+++ b/package.json
@@ -6,13 +6,7 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "type": "module",
-    "workspaces": [
-        "main-site",
-        "builds",
-        "paste",
-        "golf",
-        "shared"
-    ],
+    "workspaces": ["main-site", "builds", "paste", "golf", "shared"],
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -20,7 +14,7 @@
     },
     "dependencies": {
         "husky": "^9.1.7",
-        "lint-staged": "^16.1.6",
+        "lint-staged": "^16.2.7",
         "postinstall-postinstall": "^2.1.0"
     },
     "scripts": {
@@ -30,18 +24,18 @@
     },
     "packageManager": "yarn@4.9.4",
     "devDependencies": {
-        "@eslint/compat": "^1.3.2",
-        "@eslint/js": "^9.35.0",
-        "@next/eslint-plugin-next": "^15.5.2",
-        "eslint-config-next": "^15.5.2",
+        "@eslint/compat": "^2.0.0",
+        "@eslint/js": "^9.39.1",
+        "@next/eslint-plugin-next": "^16.0.7",
+        "eslint-config-next": "^16.0.7",
         "eslint-import-resolver-typescript": "^4.4.4",
         "eslint-plugin-import": "^2.32.0",
         "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "6.0.0-rc1",
+        "eslint-plugin-react-hooks": "7.0.1",
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "eslint-plugin-sonarjs": "^3.0.5",
-        "eslint-plugin-unicorn": "^61.0.2",
-        "typescript-eslint": "^8.43.0",
+        "eslint-plugin-unicorn": "^62.0.0",
+        "typescript-eslint": "^8.48.1",
         "typescript-plugin-css-modules": "^5.2.0"
     }
 }
