--- a/paste/package.json
+++ b/paste/package.json
@@ -9,24 +9,24 @@
         "@enginehub/schematicjs": "^0.10.0",
         "@enginehub/schematicwebviewer": "^4.9.1",
         "@enginehub/shared": "workspace:*",
-        "@google-cloud/storage": "^7.17.0",
+        "@google-cloud/storage": "^7.18.0",
         "base64-js": "^1.5.1",
-        "next": "^15.5.2",
-        "react": "^19.1.1",
-        "react-dom": "^19.1.1",
-        "sharp": "^0.34.3",
+        "next": "^16.0.7",
+        "react": "^19.2.1",
+        "react-dom": "^19.2.1",
+        "sharp": "^0.34.5",
         "shortid": "^2.2.17"
     },
     "devDependencies": {
-        "@types/node": "^22.18.1",
-        "@types/react": "19.1.12",
-        "@types/react-dom": "19.1.9",
+        "@types/node": "^22.19.1",
+        "@types/react": "19.2.7",
+        "@types/react-dom": "19.2.3",
         "@types/shortid": "^2.2.0",
         "babel-plugin-react-compiler": "^19.1.0-rc.3",
-        "eslint": "^9.35.0",
-        "postcss-preset-env": "^10.3.1",
-        "prettier": "^3.6.2",
-        "typescript": "^5.9.2"
+        "eslint": "^9.39.1",
+        "postcss-preset-env": "^10.4.0",
+        "prettier": "^3.7.4",
+        "typescript": "^5.9.3"
     },
     "keywords": [
         "pastebin",
@@ -44,7 +44,5 @@
         "lint": "eslint src/ pages/",
         "lint:fix": "yarn lint --fix"
     },
-    "sideEffects": [
-        "*.global.css"
-    ]
+    "sideEffects": ["*.global.css"]
 }
