--- a/shared/package.json
+++ b/shared/package.json
@@ -9,21 +9,16 @@
     "types": "./src/index.ts",
     "type": "module",
     "devDependencies": {
-        "@types/node": "^22.18.1",
-        "@types/react": "19.1.12",
-        "@types/react-dom": "19.1.9",
-        "eslint": "^9.35.0",
-        "prettier": "^3.6.2",
+        "@types/node": "^22.19.1",
+        "@types/react": "19.2.7",
+        "@types/react-dom": "19.2.3",
+        "eslint": "^9.39.1",
+        "prettier": "^3.7.4",
         "schema-dts": "^1.1.5",
         "tslib": "^2.8.1",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.3"
     },
-    "keywords": [
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
         "lint": "eslint src/",
@@ -33,8 +28,8 @@
     },
     "sideEffects": false,
     "dependencies": {
-        "next": "^15.5.2",
-        "react": "^19.1.1",
-        "react-dom": "^19.1.1"
+        "next": "^16.0.7",
+        "react": "^19.2.1",
+        "react-dom": "^19.2.1"
     }
 }
